--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,11 @@
     "polymer": "Polymer/polymer#^1.4.0",
     "paper-styles": "PolymerElements/paper-styles#^1.1.5",
     "paper-button": "PolymerElements/paper-button#^1.0.13",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1"
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
+    "app-storage": "PolymerElements/app-storage#^0.9.6",
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.10",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
