--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,6 @@
   "name": "stillinbed",
   "short_name": "stillinbed",
   "description": "Get up earlier by tracking the time you get out of bed",
-  "start_url": "/",
+  "start_url": "/still-in-bed/",
   "display": "standalone"
 }
