--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "app-storage": "PolymerElements/app-storage#^0.9.6",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "iron-icon": "PolymerElements/iron-icon#^1.0.10",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
   }
 }
