--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,7 +1,7 @@
 {
     "version": "0.1.0",
-    "command": "polymer",
+    "command": "npm",
     "isShellCommand": true,
-    "args": ["serve", "-p", "8010"],
-    "showOutput": "always"
+    "args": ["run", "dev"],
+    "showOutput": "silent"
 }
