--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "browser-sync": "^2.17.0"
   },
   "scripts": {
-    "dev": "polymer serve & npm run watch",
+    "dev": "polymer serve | npm run watch",
     "test": "polymer test",
-    "watch": "browser-sync start --proxy localhost:8080 --files '*/*.html, src/*.js' "
+    "watch": "browser-sync start --proxy localhost:8080 --files \"*/*.html, src/*.js\" "
   },
   "repository": {
     "type": "git",
