--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "browser-sync": "^2.17.0"
   },
   "scripts": {
-    "dev": "polymer serve | npm run watch",
+    "dev": "browser-sync start --server --files \"*/*.html, src/*.js\" ",
     "test": "polymer test",
     "watch": "browser-sync start --proxy localhost:8080 --files \"*/*.html, src/*.js\" "
   },
