--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "iron-icon": "PolymerElements/iron-icon#^1.0.10",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
+    "full-width-text": "^0.1.0"
   }
 }
